<resources>
    <string name="app_name">Restaurant Simulator</string>
    <string name="create_order">Create Order</string>
    <string name="view_orders">View Orders</string>
    <string name="clear_all">Clear All</string>
    <string name="fill_data">Fill dummy data</string>
    <string name="item_name_hint">Item Name</string>
    <string name="item_amount_hint">Amount</string>
    <string name="item_instructions_hint">Extra Instructions</string>
    <string name="no_result">Nothing to show</string>
    <string name="list_item_name">Item Name: %1$s</string>
    <string name="list_item_amount">Amount: %1$d</string>
    <string name="list_item_instructions">Extra Instructions: %1$s</string>
    <string name="error_name">You need to enter an item name</string>
    <string name="error_amount">You need to enter the amount</string>
    <string name="error_instruction">You need to enter extra instruction</string>
</resources>
